Add use instructions.

--- a/raw.config
+++ b/raw.config
@@ -1,83 +1,31 @@
 	"Organization
 (""Jackie Morton"" isn't a student org)"	Date Received	Sender	Package Type	Monitor Logging Package (Your name)	Comments	E-mail Sent to group by Manager	Receiver Full Name	Receiver JHU Email	Date Picked Up	Monitor Initials
-5-2	JOSH	5/2/2019	amazon	Package Box	AB			-	-	-	-
-5-3	josh	5/2/2019	amazon	Package Box	AB			Karnika Mehrotra	kmehrot1@jhu.edu	5/2/19	IE
-5-4	the hop	5/2/2019	amazon	Package Box	AB						
-5-5	Hopkins Feminists	5/2/2019	amazon	Package Box	AB			Shalini Vijayekumar	svijaye1@jhu.edu	5/14/2019	AB
-5-6	josh	5/2/2019	amazon	Package Box	AB			Karnika Mehrotra	kmehrot1@jhu.edu	5/2/19	IE
-5-7	zaniada	5/2/2019	amazon	Package Box	AB			Allison Jiang	Ajiang7@jhu.edi	5/2/19	IE
-5-8	shine	5/2/2019	amazon	Package Box	AB			Jessica Montoya	jmontoya8@jhu.edu	5/11/19	EZ
-5-9	shine	5/2/2019	amazon	Package Box	AB			Jessica Montoya	jmontoya8@jhu.edu	5/11/19	EZ
-5-10	BAILA	5/2/2019	amazon	package envelope	AB			Edwin Arriola	earriol1@jhu.edu	5/2/19	IE
-5-11	BAILA	5/2/2019	amazon	package envelope	AB			Edwin Arriola	earriol1@jhu.edu	05-02-19	IE
-5-12	Hopkins Feminists	5/2/2019	amazon	package envelope	AB			Shalini Vijayekumar	svijaye1@jhu.edu	5/13/19	AB
-5-13	bailA	5/2/2019	amazon	package envelope	AB			Edwin Arriola	earriol1@jhu.edu	5/2/2019	IE
-5-14	sophemore class	5/2/2019	amazon	package envelope	AB			coco cai	ycai20@jhu.edu	5/2/19	ab
-5-15	baila	5/2/2019	amazon	package envelope	AB			Edwin Arriola	earriol1@jhu.edu	5/2/19	IE
-5-16	josh	5/2/2019	amazon	package envelope	AB			Karnika Mehrotra	kmehrot1@jhu.edu	5/2/19	IE
-5-17	the hop	5/2/2019	amazon	Package Box	AB						
-5-18	shine	5/2/2019	amazon	Package Box	ab	-		Johnnie Johnson 	jmontoy8@jhu.edu	05-02-19	IE
-5-19	Crystal Hooper	5/2/2019	amazon	Package Box	NL	-		-	-	-	-
-5-20	JOSH	5/3/2019	amazon	Package Box	NLS						
-5-21	SHINE	5/3/2019	amazon 	package bag	NLS			Jessica Montoya	jmontoy8@jhu.edu	5/3/19	NLS
-5-22	SHINE	5/3/2019	amazon 	package bag	NLS			Jessica Montoya	jmontoy8@jhu.edu	05-03-19	NLS
-5-23	SHINE	5/3/19	amazon 	package bag	NLS			Jessica Montoya	jmontoy8@jhu.edu	05-03-19	NLS
-5-24	Marque Magazine	5/3/2019	amazon	package envelope	NLS 			Layla Al-zubi	Lalzubi1@jhu.edu	5/4/19	-
-5-25	SHINE	5/3/2019	brokemarys	package bag				Jessica Montoya	jmontoy8@jhu.edu	5/11/19	EZ
-5-26	baila	5/3/19	honors graduation	package envelope				Edwin Arriola	earriol1@jhu.edu	5/5/19	BO
-5-27	SHINE	5/3/2019		package bag				Jessica Montoya	jmontoy8@jhu.edu	5/8/19	FKB
-5-28	JOSH	5/3/2019		package envelope							
-5-29	Hopkins Feminists	5/3/2019		Package Box 				Shalini Vijayekumar	svijaye1@jhu.edu	5/10/19	CEG
-5-30	Hopkins Feminists	5/7/2019	amazon	Package Box	KI			Shalini Vijayekumar	svijaye1@jhu.edu	5/10/19	CEG
-5-31	WJHU Radio	5/7/2019	usps media mail	pacakge envelope	KI						
-5-32	Clifton Shambry	5/8/2019	amazon	Package Box	FKB	-		-	-	-	-
-5-33	Marque Magazine	5/8/2019	amazon	Package Box	FKB			Layla Al-Zubi	lalzubi1@jhu.edu	5/9/19	BO
-5-34	Clifton Shambry	5/8/2019	amazon	Package Box	FKB	-		-	-	5/21	cnh
-5-35	Baila	5/8/2019	amazon	Package Box	FKB			Edwin Arriola	earriol1@jhu.edu	5/10/19	BO
-5-36	Thoroughfare Magazine	5/8/2019	ups ground	Package Box	FKB			Saena Sadiq	ssyed18@jhu.edu	5/14/19	EC
-5-37	JOSH	5/8/2019	ups ground	Package Box	FKB						
-5-38	Marque Magazine	5/8/2019	FedEx	package envelope	FKB			Layla Al-Zubi	lalzubi1@jhu.edu	5/9/19	BO
-5-39	KROSS	5/8/2019	amazon	Package Box	FKB						
-5-40	Clifton Shambry	5/8/2019	amazon	Package Box	FKB			-	-	-	-
-5-41	JOSH	5/8/2019	ups ground	Package Box	FKB			Karnika Mehrotra	kmehrot1@jhu.edu	5/9/19	CEG
-5-42	Clifton Shambry	5/8/2019	amazon	Package Box	FKB			-	-	-	-
-5-43	Clifton Shambry	5/10/2019	amazon	package bag	CEG			-	-	-	-
-5-44	Muslim Students	5/10/2019	amazon	Package Box	CEG			Taskin Forkin 	tforkin1@jhu.edu	5/10/19	NLS 
-5-45	Zinda 	5/13/2019	amazon	package bag	NLS						
-5-46	SHINE	5/14/2019	Wish Post	Package bag	EGK			Jessica Montoya	jmontoy8@jhu.edu	5/14/18	AB
-5/47	Marque Magazine	5/14	amazon	package bag	EZ						
-5-48	JohnCon	5/15	Amazon	Package bag	NW			Stanton Owens	sowens24@jhu.edu	5/14	VC
-5-49	JohnCon	5/15	Amazon	package envelope	NW			Stanton Owens	sowens24@jhu.edu	5/14	VC
-5-50	Eclectics	5/15	USPS 	Package Box	NW						
-5-51	JohnCon	5/15	Amazon	Package Box	NW			Stanton Owens	sowens24@jhu.edu	5/14/18	VC
-5-52	JohnCon	5/15	Amazon	Package Box	NW			Stanton Owens	sowens24@jhu.edu	5/14/2018	VC
-5-53	JohnCon	5/15	Amazon	Package Box	NW			Stanton Owens	sowens24@jhu.edu	5/14/2018	VC
-5-54	Marque Magazine	5/15	China Post	Package Bag 	IC						
-5-55	Claire Beaver	5/16	usps media mail	package envelope	NW						
-5-56	jacky morton	5/17	amazon	package envelope	EZ			-	-	5-21-19	cnh
-5-57	liz pence	5/17	amazon	Package Box	EZ						
-5-58	liz pence	5/17	office max	Package Box	ez			-	-	-	-
-5-59	liz pence	5/17	office max	Package Box	ez						
-5-60	liz pence	5/17	office max	Package Box	ez						
-5-61	liz pence	5/17	office max	Package Box	ez						
-5-62	liz pence	5/17	office max	Package Box	ez						
-5-63	liz pence	5/17	office max	Package Box	ez						
-5-64	liz pence	5/17	office max	Package Box	ez						
-5-65	sga	5/17	honors graduatoin	package envelope	ez			AJ	-	5/21/2019	cnh
-5-66	Barnstormers	5/26	Ebay	Package Box	IG	Covered in duct tape, BARNSTORMERS written in blue sharpie on the mailing label					
-5-67	Abdur Sajid	5/28	4imprint	Package Box	IE			Sun Jay Yoo	Syoo21@jhu.edu	6/3	IE
-5-68	Abdur Sajid	5/28	4imprint	Package Box	IE			Sun Jay Yoo	Syoo21@jhu.edu	6/3/19	IE
-5-69	Choral Society	5/29	Sheetmusicplus	Package Envelope	IE						
-5-70	Choral Society	5/29	Sheetmusicplus	Package Envelope	IE						
-5-71	WJHU Radio	5/29	USPS 	Package Envelope	IE						
-5-72	Choral Society	5/29	Sheetmusicplus	Package Envelope	IE						
-5-73	Choral Society	5/30	Sheetmusicplus	Package Box	IE						
-5-74	MSE	5/30	amazon	Package Box	IE						
-5-75	MSE	5/30	keylion protector 	Package Envelope	TE						
-5-76	MSE	5/30	Mendota Merchants	Package Box	TE						
-5-77	MSE	5/30	Mendota Merchants	Package Box	TE						
-5-78	Josh	5/30	Custom Ink	Package Box	TE						
-5-79	MSE	5/30	Amazon	Package Envelope	TE						
-5-80	Choral Society	6/5	Sheetmusicplus	Package Envelope	IE	
-6-1	DSAGA	6/4/19	StickerMule	Package Box	Kai																							
-6-2	MSE	6/7/2019	CustomInk	Package Box	Ify																												
+8-0	EXAMPLE ORG	8/3/2019	AMAZON	Large Envelope	Isaiah			Bob	bob@jhu.edu	8/24/19	IG
+6-1	DSAGA	6/4/19	StickerMule	Package Box	Kai						
+6-2	MSE	6/7/2019	CustomInk	Package Box	Ify						
+6-3	WJHU	6/10/2019	TinderboxMusic	Large Envelope	Sanjana						
+6-4	dance marathon	6/11/2019	4imprint	Package Box	kai			Abbie	abowma11@jhu.edu	6/12/2019	HS
+6-5	DSAGA	6/11/2019	CUStomInk	Package Box	kai						
+6-6	DSAGA	6/11/2019	CUStomInk	Package Box	kai						
+6-7	DSAGA	6/11/2019	CUStomInk	Package Box	kai						
+6-8	DSAGA	6/11/2019	CUStomInk	Package Box	kai						
+6-9	MSE	6/11/2019	CUStomInk	Package Box	kai						
+6-10	MSE	6/11/2019	Table Throw	Package Envelope	Ify						
+6-11	MSE	6/11/2019	Table Throw	Package Envelope	Ify						
+6-12	MSE	6/11/2019	Table Throw	Tube	Ify						
+6-13	JHU Undergraduate Journal	6/12/2019	Mt. Vernon Prinint	Package Box	Ify						
+6-14	JHU Undergraduate Journal	6/12/2019	Mt. Vernon Prinint	Package Box	Ify						
+6-15	JHU Undergraduate Journal	6/12/2019	Mt. Vernon Prinint	Package Box							
+6-16	Student Org- MSE	6/5/2019	Amazon	Package Box	HS						CC
+6-17	Student Org- MSE	6/5/2019	Amazon	Package Envelope	HS						CC
+6-18	JHU Newsletter	6/13/2019	USPS	Mail Envelope	WP						
+6-19	MSE Symposium	6/13/2019	CustomInk	Package Box	WP						
+6-20	MSE Symposium	6/13/2019	White Box (not clear)	Package Box	WP			Siena DeMatteo			CC
+6-21	MSE Symposium	6/13/2019	CustomInk	Package Box	WP						
+6-22	MSE Symposium	6/13/19	CUstomInk	Package Box	WP						
+6-23	WJHU Emily Whitney	6/28/2019	USPS	Package Envelope	EC						
+6-24	Agape Campus Christian Fellowship	6/28/2019	Not clear	Mail Envelope	EC						
+6-25	MSE	6/28/19	Uptown Press	Package Envelope	EC						CC
+6-26	MSE	6/28/19	CUstomInk	Package Box	EC			Siena DeMatteo			CC
+6-27	MSE	6/28/19	CUstomInk	Package Box	EC			Siena DeMatteo			CC
+6-28	MSE	6/28/19	CUstomInk	Package Box	EC			Siena DeMatteo			CC
